fixes, ASP.NET and remote debugger
- ADD: started to implement remote debugger
- ADD: ASP.NET/Web support
- CHG: minor fixes

--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,21 @@
 /Projects/MarcelJoachimKloubert.MusicSorter/MarcelJoachimKloubert.MusicSorter/obj
 /Projects/MarcelJoachimKloubert.MusicSorter/MarcelJoachimKloubert.MusicSorter/bin
 /Projects/MarcelJoachimKloubert.MusicSorter/MarcelJoachimKloubert.MusicSorter.v11.suo
+/MarcelJoachimKloubert.CLRToolbox.20.Web/obj
+/MarcelJoachimKloubert.CLRToolbox.20.Web/bin
+/MarcelJoachimKloubert.CLRToolbox.35.Web/obj
+/MarcelJoachimKloubert.CLRToolbox.35.Web/bin
+/MarcelJoachimKloubert.CLRToolbox.40.Web/obj
+/MarcelJoachimKloubert.CLRToolbox.40.Web/bin
+/MarcelJoachimKloubert.CLRToolbox.45.Web/obj
+/MarcelJoachimKloubert.CLRToolbox.45.Web/bin
+/Projects/MarcelJoachimKloubert.ServerAdmin/MarcelJoachimKloubert.ServerAdmin/obj
+/Projects/MarcelJoachimKloubert.ServerAdmin/MarcelJoachimKloubert.ServerAdmin/bin
+/Projects/MarcelJoachimKloubert.ServerAdmin/MarcelJoachimKloubert.ServerAdmin/Web.config
+/Projects/MarcelJoachimKloubert.ServerAdmin/MarcelJoachimKloubert.ServerAdmin/Web.Debug.config
+/Projects/MarcelJoachimKloubert.ServerAdmin/MarcelJoachimKloubert.ServerAdmin/Web.Release.config
+/MarcelJoachimKloubert.CLRToolbox.20.Web/MarcelJoachimKloubert.CLRToolbox.20.Web.csproj.user
+
+/MarcelJoachimKloubert.CLRToolbox.35.Web/MarcelJoachimKloubert.CLRToolbox.35.Web.csproj.user
+/Projects/MarcelJoachimKloubert.ServerAdmin/MarcelJoachimKloubert.ServerAdmin.v11.suo
+/Projects/MarcelJoachimKloubert.ServerAdmin/MarcelJoachimKloubert.ServerAdmin/MarcelJoachimKloubert.ServerAdmin.csproj.user
