--- a/MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
@@ -1491,6 +1492,24 @@
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Data\QueryableDatabaseBase.cs">
       <Link>Data\QueryableDatabaseBase.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.35\diagnostics\remoting\IRemoteDebugger.cs">
+      <Link>Diagnostics\Remoting\IRemoteDebugger.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.35\diagnostics\remoting\IRemoteDebuggerCallback.cs">
+      <Link>Diagnostics\Remoting\IRemoteDebuggerCallback.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.35\diagnostics\remoting\RemoteDebuggerBase.cs">
+      <Link>Diagnostics\Remoting\RemoteDebuggerBase.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.35\diagnostics\remoting\RemoteDebuggerCallbackBase.cs">
+      <Link>Diagnostics\Remoting\RemoteDebuggerCallbackBase.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.35\diagnostics\remoting\RemoteLogMessage.cs">
+      <Link>Diagnostics\Remoting\RemoteLogMessage.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.35\diagnostics\remoting\RemoteLogMessageSender.cs">
+      <Link>Diagnostics\Remoting\RemoteLogMessageSender.cs</Link>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\ClrToolboxExtensionMethods.cs">
       <Link>Extensions\ClrToolboxExtensionMethods.cs</Link>
