--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -562,7 +562,12 @@
     </Compile>
     <Compile Include="_Compatibility\System\Collections\Generic\IReadOnlyCollection.cs" />
     <Compile Include="_Compatibility\System\Collections\Generic\IReadOnlyDictionary.cs" />
+    <Compile Include="_Compatibility\System\Collections\IStructuralComparable.cs" />
+    <Compile Include="_Compatibility\System\Collections\IStructuralEquatable.cs" />
     <Compile Include="_Compatibility\System\Func.cs" />
+    <Compile Include="_Compatibility\System\ITuple.cs" />
+    <Compile Include="_Compatibility\System\Tuple.cs" />
+    <Compile Include="_Compatibility\System\TMTupleBase.cs" />
     <Compile Include="_Embedded\Newtonsoft.Json\Bson\BsonBinaryType.cs" />
     <Compile Include="_Embedded\Newtonsoft.Json\Bson\BsonBinaryWriter.cs" />
     <Compile Include="_Embedded\Newtonsoft.Json\Bson\BsonObjectId.cs" />
