started MetalVZ and Cloud.NET projects

--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,25 @@
 /MarcelJoachimKloubert.CLRToolbox.35.Web/MarcelJoachimKloubert.CLRToolbox.35.Web.csproj.user
 /Projects/MarcelJoachimKloubert.ServerAdmin/MarcelJoachimKloubert.ServerAdmin.v11.suo
 /Projects/MarcelJoachimKloubert.ServerAdmin/MarcelJoachimKloubert.ServerAdmin/MarcelJoachimKloubert.ServerAdmin.csproj.user
+
+/Projects/MarcelJoachimKloubert.MetalVZ/MarcelJoachimKloubert.MetalVZ/obj
+/Projects/MarcelJoachimKloubert.MetalVZ/MarcelJoachimKloubert.MetalVZ/bin
+/Projects/MarcelJoachimKloubert.MetalVZ/MarcelJoachimKloubert.MetalVZ/MarcelJoachimKloubert.MetalVZ.csproj.user
+/Projects/MarcelJoachimKloubert.MetalVZ/MarcelJoachimKloubert.MetalVZ/Web.config
+/Projects/MarcelJoachimKloubert.MetalVZ/MarcelJoachimKloubert.MetalVZ/Web.Debug.config
+/Projects/MarcelJoachimKloubert.MetalVZ/MarcelJoachimKloubert.MetalVZ/Web.Release.config
+/Projects/MarcelJoachimKloubert.MetalVZ/packages
+/Projects/MarcelJoachimKloubert.MetalVZ/MarcelJoachimKloubert.MetalVZ.v11.suo
+/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.v11.suo
+/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.csproj.user
+/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/Web.config
+/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/Web.Debug.config
+/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/Web.Release.config
+/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/bin
+/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/obj
+
+/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.FileSync/obj
+/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.FileSync/bin
+/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.FileSync/App.config
+
+/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/config.ini
