Cloud.NET, tuples and extension /helper methods
- ADD: started to implement basic types for Cloud.NET
- ADD: ToByteArray() helper / extension methods for Streams
- ADD: WritableTuple classes

--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -232,6 +232,9 @@
     <Compile Include="Helpers\CollectionHelper.Shuffle.cs">
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\IOHelper.ToByteArray.cs">
+      <DependentUpon>IOHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\IOHelper.WriteGuid.cs">
       <DependentUpon>IOHelper.cs</DependentUpon>
     </Compile>
@@ -555,6 +558,7 @@
     <Compile Include="TMObject.Fields.cs">
       <DependentUpon>TMObject.cs</DependentUpon>
     </Compile>
+    <Compile Include="WritableTuple.cs" />
     <Compile Include="_Compatibility\System\Action.cs" />
     <Compile Include="_Compatibility\System\AggregateException.cs" />
     <Compile Include="_Compatibility\System\AggregateException.dotNET.cs">
