--- a/MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj
@@ -494,6 +494,10 @@
       <Link>Helpers\IOHelper.ReadGuid.cs</Link>
       <DependentUpon>IOHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\IOHelper.ToByteArray.cs">
+      <Link>Helpers\IOHelper.ToByteArray.cs</Link>
+      <DependentUpon>IOHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\IOHelper.WriteGuid.cs">
       <Link>Helpers\IOHelper.WriteGuid.cs</Link>
       <DependentUpon>IOHelper.cs</DependentUpon>
@@ -933,6 +937,9 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\TMObject.Fields.cs">
       <Link>TMObject.Fields.cs</Link>
       <DependentUpon>TMObject.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\WritableTuple.cs">
+      <Link>WritableTuple.cs</Link>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\_Embedded\Newtonsoft.Json\Bson\BsonBinaryType.cs">
       <Link>_Embedded\Newtonsoft.Json\Bson\BsonBinaryType.cs</Link>
@@ -1648,6 +1655,10 @@
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\IO.ReadGuid.cs">
       <Link>Extensions\IO.ReadGuid.cs</Link>
+      <DependentUpon>IO.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\IO.ToByteArray.cs">
+      <Link>Extensions\IO.ToByteArray.cs</Link>
       <DependentUpon>IO.cs</DependentUpon>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\IO.WriteGuid.cs">
