--- a/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj
@@ -417,6 +417,9 @@
       <Link>Helpers\IOHelper.ReadGuid.cs</Link>
       <DependentUpon>IOHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\IOHelper.ToByteArray.cs">
+      <Link>Helpers\IOHelper.ToByteArray.cs</Link>
+    </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\IOHelper.WriteGuid.cs">
       <Link>Helpers\IOHelper.WriteGuid.cs</Link>
       <DependentUpon>IOHelper.cs</DependentUpon>
@@ -794,6 +797,9 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\TMObject.cs">
       <Link>TMObject.cs</Link>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\WritableTuple.cs">
+      <Link>WritableTuple.cs</Link>
+    </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\_Compatibility\System\AggregateException.cs">
       <Link>_Compatibility\System\AggregateException.cs</Link>
     </Compile>
@@ -903,6 +909,10 @@
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\IO.ReadGuid.cs">
       <Link>Extensions\IO.ReadGuid.cs</Link>
+      <DependentUpon>IO.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\IO.ToByteArray.cs">
+      <Link>Extensions\IO.ToByteArray.cs</Link>
       <DependentUpon>IO.cs</DependentUpon>
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\IO.WriteGuid.cs">
