extension/helper methods and tuples
- ADD: Where() extension/helper methods for IEnumerable and pre LINQ
systems
- CHG: code improvements
- CHG: marked writable tuples as serializable

--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -189,6 +189,9 @@
     <Compile Include="Helpers\CollectionHelper.ToEnumerableSafe.cs">
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\CollectionHelper.Where.cs">
+      <DependentUpon>CollectionHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\CompressionHelper.cs" />
     <Compile Include="Helpers\DataHelper.Build.cs">
       <DependentUpon>DataHelper.cs</DependentUpon>
